// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesTotal with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;

exports[`should correctly render ExpensesTotal with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    23
     
    expenses
     totalling 
    $233.93
  </h2>
</div>
`;
